<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="518dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPedidoPizzaTamanho"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pedidoPizzaListTamanho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPedidoPizzaBorda"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pedidoPizzaListBorda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPedidoPizzaSelecione"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pedidoPizzaListSabor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPedidoPizzaSelecione"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pedidoPizzaListSabor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPedidoPizzaSelecione"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pedidoPizzaListSabor3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="35.85" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignRight="@+id/btPedidoPizzaAdicionarPedido"
                    android:layout_below="@+id/btPedidoPizzaAdicionarPedido"
                    android:text="@string/btPedidoPizzaSubmit" />

                <Button
                    android:id="@+id/btPedidoPizzaCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/btPedidoPizzaReiniciarPrato"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/btPedidoPizzaReiniciarPrato"
                    android:text="@string/txtPedidoPizzaBtCancelarPrato" />

                <Button
                    android:id="@+id/btPedidoPizzaListar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/btListar" />

                <Button
                    android:id="@+id/btPedidoPizzaAdicionarPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/btPedidoPizzaListar"
                    android:layout_toLeftOf="@+id/btPedidoPizzaReiniciarPrato"
                    android:text="@string/txtPedidoPizzaBtAdicionarNovoPedido" />

                <Button
                    android:id="@+id/btPedidoPizzaReiniciarPrato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/btPedidoPizzaListar"
                    android:text="@string/txtPedidoPizzaBtReiniciarPrato" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

 